[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/panel/panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/gui/trick_popup/trick_popup.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.992157, 0.878431, 0.764706, 1 )
font_data = ExtResource( 2 )

[node name="popup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="center_container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="panel" parent="center_container" instance=ExtResource( 1 )]

[node name="margin_container" type="MarginContainer" parent="center_container/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="vbox_container" type="VBoxContainer" parent="center_container/panel/margin_container"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 330.0
custom_constants/separation = 20

[node name="label" type="Label" parent="center_container/panel/margin_container/vbox_container"]
margin_right = 560.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.992157, 0.878431, 0.764706, 1 )
custom_fonts/font = SubResource( 1 )
text = "¿Sigues ahí?"
align = 1
valign = 1
autowrap = true

[node name="hbox_container" type="HBoxContainer" parent="center_container/panel/margin_container/vbox_container"]
margin_top = 190.0
margin_right = 560.0
margin_bottom = 240.0
custom_constants/separation = 50

[node name="left_button" parent="center_container/panel/margin_container/vbox_container/hbox_container" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 255.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="right_button" parent="center_container/panel/margin_container/vbox_container/hbox_container" instance=ExtResource( 3 )]
margin_left = 305.0
margin_top = 0.0
margin_right = 560.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="hbox_container_2" type="HBoxContainer" parent="center_container/panel/margin_container/vbox_container"]
margin_top = 260.0
margin_right = 560.0
margin_bottom = 310.0
custom_constants/separation = 50

[node name="left_button" parent="center_container/panel/margin_container/vbox_container/hbox_container_2" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 255.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="right_button" parent="center_container/panel/margin_container/vbox_container/hbox_container_2" instance=ExtResource( 3 )]
margin_left = 305.0
margin_top = 0.0
margin_right = 560.0
margin_bottom = 50.0
size_flags_horizontal = 3

[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/hbox_container/left_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/hbox_container/right_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/hbox_container_2/left_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/hbox_container_2/right_button" to="." method="_on_button_pressed"]
